--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,14 @@ body,
 	z-index: 1;
 	opacity: 0;
 	transition: opacity 0.5s;
-	font-size: 20vw;
+	font-size: 15vw;
 	color: gold;
 	text-shadow: 0px 0px 5px black;
 }
 
 .flash-score.visible {
 	opacity: 1;
+}
+.progress-bar {
+	transition-duration: 0.2s !important;
 }
